www/landing/style.css
* {
	box-sizing: border-box; 
}

body { 
	margin: 0;  
	font-size: small;
	height: 100vh;
	overflow: hidden;
}

/* big chat window */

#chatOne {
	display: none;
	position: absolute;
	width: 75vw;
	height: 75vh;
	margin: auto;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
	z-index: 10000;
	border: 1px dashed black;
	background: #eee;
}

.left, .right {
	position: absolute;
	width: 37.5vw;
	bottom: 0;
}

.right {
	right: 0;
}

.left {
	left: 0;
	border-right: 1px dashed #000;
}

.leftChat, .rightCode {
	position: absolute;
	width: 37.5vw;
	top: 0;
	bottom: 0;
}

.rightCode {
	right: 0;
	font-family: monospace;
	font-size: 14px;
	color: #00d;
}

.leftChat {
	left: 0;
}

.codeLine, .codeSend {
	position: absolute;
	top: 10px;
	margin: 0;
	color: #00d;
}

.codeLine {
	left: 10px;
}

.codeSend {
	right: 10px;
	cursor: pointer;
	font-size: 20px;
}

.mono::-webkit-input-placeholder, textarea.mono {
	font-family: monospace;
	color: #00d;
}

/* chat columns */

#one, #two, #thre, #four {
	position: relative;
	display: inline-block;
	width: 24vw;
	height: 100vh;
	margin: 0;
	overflow: hidden;
}

#info {
	position: relative;
	display: inline-block;
	width: 4vw;
	height: 100vh;
	margin: 0;
	overflow: hidden;
}

/* 

list styles
 
*/

ul { 
	position: absolute;
	margin: 0;
	padding: 10px 0 0 0;
	list-style: none;
	width: 100%;
	height: calc(100% - 58px);
}

li {
    line-height: 24px;
    margin-left: 30px;
    word-wrap: break-word;
}

ul img {
    /*width: 66%;*/
    height: 100px;
    display: block;
    margin-bottom: 10px;
    max-width: 100%;
}

#one > ul, #two > ul, #thre > ul, #four > ul {
    width: 100%;
    margin-bottom: 58px;
    overflow: scroll;
}

#info > ul {
	border-left: 1px dashed #000;
	height: 100%;
}

#info li {
	font-family: sans-serif;
	font-size: 14px;
	margin: 0 20px;
	-webkit-transform: rotate(90deg); 
	-moz-transform: rotate(90deg);
	-o-transform: rotate(90deg);  
	transform: rotate(90deg);
	white-space: nowrap;
}

#chatOne ul {
	bottom: 58px;
	overflow: scroll;
}

ul > li::before {
	position: absolute;
	margin-left: -20px;
	font-family: sans-serif;
}

.first > li::before {
	content: "1";
}

.second > li::before {
	content: "2";
}

.third > li::before {
	content: "3";
}

.fourth > li::before {
	content: "4";
}

.codeT > li::before {
	content: ">";
}

/*

some fixed elements:
– textarea (plus its number)
– arrows (send, maximize, minimize)

*/

.open, .close, .numb, .send {
	position: absolute;
	font-family: sans-serif;
}

.open, .close {
	top: 0;
	right: 0;
	margin: 10px 15px;
	cursor: pointer;
	font-size: 20px;
}

.open { 
	-webkit-transform: rotate(45deg); 
	-moz-transform: rotate(45deg);
	-o-transform: rotate(45deg);  
	transform: rotate(45deg);
	z-index: 100;
}

.close { 
	-webkit-transform: rotate(-135deg); 
	-moz-transform: rotate(-135deg);
	-o-transform: rotate(-135deg);  
	transform: rotate(-135deg); 
	z-index: 1000;
}

.numb {
    top: 10px;
	left: 10px;
	margin: 0;
}

.send {
    margin: 0;
	top: 10px;
	right: 10px;
	cursor: pointer;
	font-size: 20px;
}

.textA {
	position: absolute;
	height: 58px;
	width: 100%;
	bottom: 0;
	margin: 0;
	padding: 10px 0 0 0;
}

.blueA {
	background: transparent;
/*	background: #eff; */
}

.noA { background: transparent; }

textarea { 
	font-size: 14px;
	height: 100%;
	width: 100%;
	margin: 0; 
	padding: 0 30px;
	border: none; 
	background: transparent;
	resize: none;
	outline: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    -o-box-shadow: none;
    box-shadow: none;
    overflow: hidden;
}

::-webkit-input-placeholder { color: #000; }
::-moz-input-placeholder { color: #000; }
::-o-input-placeholder { color: #000; }
::input-placeholder { color: #000; }

div.over { background-color: #ccc; }

/* mobile */

@media only screen and (max-width: 800px) {

	#one, #two, #thre, #four {
		display: block;
		width: 100vw;
		height: 23vh;
		border-bottom: 1px dashed #000;
	}

	#info {
		display: block;
		width: 100vw;
		height: 8vh;
	}

	ul {
		height: 100%;
	}

	li {
		font-size: 16px;
		line-height: 32px;
	}

	.textA {
		display: none;
	}

}

/* end */

